spacing fix for nav menu
practice

--- a/css/freshmain.css
+++ b/css/freshmain.css
@@ -137,7 +137,7 @@ ul.menu li a{
     -moz-font-smoothing: antialiased;
     -ms-font-smoothing: antialiased;
     -o-font-smoothing: antialiased;
-    padding: 10px 10px 10px 10px;
+    padding: 8px 8px 8px 8px;
     line-height: 1em;
     text-decoration: none;
     font-weight: 600;
